main.css
* {
  margin: 0px;
}

body {
  font-family: 'Open Sans', sans-serif;
    }

header {
  background-image: url("images/headerkitty.jpg");
  background-position: center;
  background-size: cover;
  color: #083452;
  padding: 10px;
  height: 555px;
  width: 100%;
}

.header-bar {
  margin: 0;
}

.blog {
  display: inline-block;
  letter-spacing: -2px;
}

h1 {
  float: left;
  font-family: 'Oswald', sans-serif;
  font-size: 4em;
  color: #083452;
  line-height: 75px;
}

h2 {
  font-size: 2em;
  color: #005AA9;
}

h3 {
  float: right;
  padding-top: 15px;
}

p {
  line-height: 30px;
}

.about-search {
  display: inline-block;
  font-family: 'Oswald', sans-serif;
  font-size: 1.25em;
  float: right;
}

#search::after {
  content: url(icons/search.png);
}

.title {
  color: #fff;
  font-size: 7em;
  letter-spacing: -3px;
  text-shadow: -2px -0px #000;
  text-align: center;
  position:relative;
  top: 35%;
  transform: translateY(-50%);
}

.subtitle {
  text-align: center;
  position:relative;
  top: 20%;
  transform: translateY(-50%);
  font-weight: bold;
  letter-spacing: -1px;
}

.main-content {
  display: inline-block;
  vertical-align: top;
  width: 45%;
  margin: 50px;
}

after.main-content {
  clear: left;
}

.name {
  color: #005AA9;
  font-size: .90em;
  font-weight: bold;
}

.read {
  display: inline-block;
  color: #fff;
  font-size: .90em;
  text-align: right;
  padding: 15px;
}

.read-comments {
  background-color: #A3B3BF;
  height: 10px;
  padding-top: 3px;
  padding-left: 0;
}

.read-comments::before {
  content: url(icons/comments.png);
  background-color: #5E686F;
  height: 25px;
  float: left;
}

.read-later {
  background-color: #A3B3BF;
  height: 10px;
  padding-top: 3px;
  padding-left: 0;
}

.read-later::before {
  content: url(icons/later.png);
  background-color: #5E686F;
  height: 25px;
  float: left;
}

.share {
  background-color: #106DB3;
  height: 10px;
  padding-top: 3px;
  padding-left: 0;
}

.share::before {
  content: url(icons/share.png);
  background-color: #083452;
  height: 25px;
  float: left;
}

.sidebar-content {
  display: inline-block;
  vertical-align: top;
  width: 40%;
  margin-left: 60px;
  color: #005AA9;
}

#sidebar-section {
  float: left;
  font-family: 'Oswald', sans-serif;
  font-size: 1.25em;
  color: #005AA9;
}

#name::before {
content: "Anne Marie ";
color: #005AA9;
font-weight: bold;
}

.caption {
  width: 50%;
  font-size: .90em;
  line-height: 20px;
  color: #ACBBC6;
}

.image-bar {
  display: inline-block;
  font-family: 'Oswald', sans-serif;
  font-size: 2em;
  color: #083452;
}

.photos img {
  width: 360px;
  height: 364px;
  float: left;
}

footer {
  background: #083452;
  height: 90px;
  width: 100%;
  padding: 10px;
  color: #ACBBC6;
  font-size: .75em;
  float: left;
}

.footer {
  display: inline-block;
  font-size: 1.25em;
  float: right;
}

.copyright {
  font-family: 'Open Sans', sans-serif;
  float: left;
}

li {
  display: inline-block;
  list-style: none;
  padding: 15px;
}

